--- a/commerce_project/commerce_app/templates/layout.html
+++ b/commerce_project/commerce_app/templates/layout.html
@@ -18,22 +18,22 @@
                 <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                   <ul class="navbar-nav">
                     <li class="nav-item active">
-                      <a class="nav-link headerOption" href="">Home</a>
+                      <a class="nav-link headerOption" href="/commerce">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link headerOption" href="#">Living</a>
+                        <a class="nav-link headerOption" href="/commerce/living">Living</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link headerOption" href="#">Kitchen</a>
+                        <a class="nav-link headerOption" href="/commerce/kitchen">Kitchen</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link headerOption" href="#">Bedroom</a>
+                        <a class="nav-link headerOption" href="/commerce/bedroom">Bedroom</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link headerOption" href="#">Search</a>
+                      <a class="nav-link headerOption" href="/commerce/search">Search</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link headerOption" href="#">Cart</a>
+                      <a class="nav-link headerOption" href="/commerce/cart">Cart</a>
                     </li>
                   </ul>
                 </div>
