--- a/commerce_project/commerce_app/templates/layout.html
+++ b/commerce_project/commerce_app/templates/layout.html
@@ -11,7 +11,7 @@
     <body>
         <div class="container-flex">
             <nav id="main-navbar" class="navbar navbar-expand-lg navbar-light">
-                <a id="title" class="navbar-brand headerOption" href="#">Finer Goods</a>
+                <a id="title" class="navbar-brand headerOption" href="/commerce">Finer Goods</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                 </button>
