--- a/commerce_project/commerce_app/templates/layout.html
+++ b/commerce_project/commerce_app/templates/layout.html
@@ -3,6 +3,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        {% block head-content %}{% endblock %}
         <title>Your Favorite Store</title>
         <!-- CSS only -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
@@ -11,7 +12,7 @@
     <body>
         <div class="container-flex">
             <nav id="main-navbar" class="navbar navbar-expand-lg navbar-light">
-                <a id="title" class="navbar-brand headerOption" href="/commerce">Finer Goods</a>
+                <a id="title" class="navbar-brand headerOption" href="/commerce">Finest Goods</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                 </button>
