--- a/commerce_project/commerce_app/templates/index.html
+++ b/commerce_project/commerce_app/templates/index.html
@@ -6,7 +6,7 @@
 <div class="py-4"></div>
 <div class="row">
     <div class="col-sm-6 shadow-lg">
-        <p>At Finest Goods, we believe in quality. That's why from our proud business partners and incredibly professional website designer. We ensure that when you come to our page. You don't leave until you're satisfied. So from our team to you, it's time to start building a better tommorow. One appliance at a time.</p>
+        <p>At Finest Goods, we believe in quality. That's why from our proud business partners and <a target="blank" href="https://apps.apple.com/us/app/crazy-pilot-extreme/id1623301203">incredibly professional</a> website designer. We ensure that when you come to our page. You don't leave until you're satisfied. So from our team to you, it's time to start building a better tommorow. One appliance at a time.</p>
     </div>
     <div class="col-sm-6 imageHolder"><img id="the-team" src="https://i.imgur.com/VQSovSl.jpg" alt="Our team"></div>
 </div>
