--- a/commerce_project/commerce_app/templates/layout.html
+++ b/commerce_project/commerce_app/templates/layout.html
@@ -42,6 +42,7 @@
     </div>
     <div class="container">
         {% block content %}{% endblock %}
+        <footer class="fixed-bottom sub-page-header" id="copyright-color">&copy; 2022 Dalton Eggleston</footer>
     </div>
     </body>
 </html>
